[gd_scene load_steps=7 format=3 uid="uid://dvic5cife4sce"]

[ext_resource type="Script" path="res://Scripts/main_camera.gd" id="1_raj0j"]
[ext_resource type="Texture2D" uid="uid://cwxyxewn75iso" path="res://Sprites/tram_tracks.png" id="2_0px8a"]
[ext_resource type="Texture2D" uid="uid://mq2t3ai3fafu" path="res://Sprites/circle.png" id="3_jbm2y"]
[ext_resource type="Script" path="res://Scripts/canvas_zoom_shift_manager.gd" id="4_hxjbl"]
[ext_resource type="Script" path="res://Scripts/canvas_manager.gd" id="5_iyqdf"]
[ext_resource type="Script" path="res://Scenes/TramDataRectangle.gd" id="6_jcd8b"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.01, 0.01)
script = ExtResource("1_raj0j")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_0px8a")

[node name="Circle" type="Sprite2D" parent="."]
visible = false
position = Vector2(569, 449)
scale = Vector2(0.01, 0.01)
texture = ExtResource("3_jbm2y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasZoomShiftManager" type="Node2D" parent="CanvasLayer"]
script = ExtResource("4_hxjbl")

[node name="CanvasManager" type="Node2D" parent="CanvasLayer/CanvasZoomShiftManager"]
script = ExtResource("5_iyqdf")

[node name="TramCountParent" type="Node2D" parent="CanvasLayer/CanvasZoomShiftManager/CanvasManager"]

[node name="LabelParent" type="Node2D" parent="CanvasLayer/CanvasZoomShiftManager/CanvasManager"]

[node name="NextTramPositionTimer" type="Timer" parent="CanvasLayer/CanvasZoomShiftManager/CanvasManager"]
wait_time = 1.5
autostart = true

[node name="MinutePassedTimer" type="Timer" parent="CanvasLayer/CanvasZoomShiftManager/CanvasManager"]
wait_time = 1.5
autostart = true

[node name="NrLinii" type="Label" parent="CanvasLayer"]
offset_left = 2.0
offset_top = 3.0
offset_right = 59.0
offset_bottom = 29.0
text = "Nr linii:"
metadata/_edit_use_anchors_ = true

[node name="Godzina" type="Label" parent="CanvasLayer"]
offset_left = 282.0
offset_top = 6.0
offset_right = 339.0
offset_bottom = 32.0
text = "07:20"
metadata/_edit_use_anchors_ = true

[node name="LineEditNrLinii" type="LineEdit" parent="CanvasLayer"]
offset_left = 60.0
offset_top = 3.0
offset_right = 127.063
offset_bottom = 34.0
max_length = 3
metadata/_edit_use_anchors_ = true

[node name="Pause_button" type="Button" parent="CanvasLayer"]
offset_left = 185.0
offset_top = 3.0
offset_right = 222.0
offset_bottom = 34.0
text = "||"
metadata/_edit_use_anchors_ = true

[node name="Text_enable_button" type="Button" parent="CanvasLayer"]
offset_left = 235.0
offset_top = 3.0
offset_right = 272.0
offset_bottom = 34.0
text = "AB"
metadata/_edit_use_anchors_ = true

[node name="Next_minute_button" type="Button" parent="CanvasLayer"]
offset_left = 135.0
offset_top = 3.0
offset_right = 172.0
offset_bottom = 34.0
text = "-►"
metadata/_edit_use_anchors_ = true

[node name="Tram Data" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color(0.0588235, 0.470588, 0.596078, 1)
offset_left = 1256.0
offset_top = 717.0
offset_right = 1490.0
offset_bottom = 910.0
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("6_jcd8b")

[node name="Data_text" type="Label" parent="CanvasLayer/Tram Data"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.180392, 0.282353, 0.333333, 1)
text = "Linia:
Id:
Zapełnienie:
Następny przystanek:
Cel:
"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer"]
offset_left = 1310.0
offset_top = 5.0
offset_right = 1479.0
offset_bottom = 25.0

[connection signal="timeout" from="CanvasLayer/CanvasZoomShiftManager/CanvasManager/NextTramPositionTimer" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_next_tram_position_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/CanvasZoomShiftManager/CanvasManager/MinutePassedTimer" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_minute_passed_timer_timeout"]
[connection signal="text_submitted" from="CanvasLayer/LineEditNrLinii" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_line_edit_text_submitted"]
[connection signal="button_up" from="CanvasLayer/Pause_button" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_pause_button_button_up"]
[connection signal="button_up" from="CanvasLayer/Text_enable_button" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_text_enable_button_button_up"]
[connection signal="button_up" from="CanvasLayer/Next_minute_button" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_next_minute_button_button_up"]
[connection signal="item_selected" from="CanvasLayer/OptionButton" to="CanvasLayer/CanvasZoomShiftManager/CanvasManager" method="_on_option_button_item_selected"]
